test-package-compiler/src/snapshots/test_package_compiler__generated_tests__opaque_type_accessor.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 237
expression: "./cases/opaque_type_accessor"
---
error: Unknown record field
  ┌─ src/two.gleam:7:14
  │
7 │   let name = user.name
  │              ^ This field does not exist

The value being accessed has this type:

    User

It does not have any fields.

